--- a/catalog/templates/catalog/by_type.html
+++ b/catalog/templates/catalog/by_type.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Главная :: Каталог товаров</title>
+        <title>{{ current_type.name }} :: Каталог товаров</title>
     </head>
     <body>
         <h1>Товары</h1>
+        <h2>Вид одежды: {{ current_type.name }}</h2>
         <div>
             <a href="/catalog/">Главная</a>
             {% for type in types %}
@@ -14,13 +15,10 @@
         </div>
         {% for item in items %}
             <div>
-                <h2>{{ item.title }}</h2>
+                <p>{{ item.title }}</p>
                 <p>{{ item.content }}</p>
-                <p><a href="/catalog/{{ item.type.pk }}/">
-                    {{ item.type.name }}</a></p>
                 <p>{{ item.published|date:"d.m.Y H:i:s" }}</p>
             </div>
         {% endfor %}
-
     </body>
 </html>
