--- a/catalog/templates/catalog/by_type.html
+++ b/catalog/templates/catalog/by_type.html
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{{ current_type.name }} :: Каталог товаров</title>
-    </head>
-    <body>
-        <h1>Товары</h1>
-        <h2>Вид одежды: {{ current_type.name }}</h2>
-        <div>
-            <a href="/catalog/">Главная</a>
-            {% for type in types %}
-                <a href="/catalog/{{ type.pk }}">{{ type.name }}</a>
-            {% endfor %}
-        </div>
-        {% for item in items %}
-            <div>
-                <p>{{ item.title }}</p>
-                <p>{{ item.content }}</p>
-                <p>{{ item.published|date:"d.m.Y H:i:s" }}</p>
-            </div>
-        {% endfor %}
-    </body>
-</html>
+{% extends 'layout/basic.html' %}
+
+{% block title %} {{ current_type.name }} {% endblock %}
+
+{% block content %}
+<h2>Вид  одежды: {{ current_type.name }}</h2>
+{% for type in types %}
+<div>
+    <h2>{{ type.title }}</h2>
+    <p>{{ type.content }}</p>
+    <p>{{ type.published|date:'d.m.Y H:i:s' }}</p>
+</div>
+{% endfor %}
+{% endblock %}
